# AI-Copilot-for-Storage

./: .gitignore  CMakeLists.txt  CMake_Architecture.md  ITERATION_PLAN.md  README.md  SEMANTIC_AI_PLAN.md  generate_vs2019.bat  generate_vs2022.bat
cmake/: Dependencies.cmake
src/: CMakeLists.txt  main.cpp
src/ai/: AIClient.cpp  AIClient.h  DeepSeekProvider.cpp  DeepSeekProvider.h  HttpClient.cpp  HttpClient.h  PromptBuilder.cpp  PromptBuilder.h
src/core/: FileNode.cpp  FileNode.h  NtfsScanner.cpp  NtfsScanner.h  Scanner.cpp  Scanner.h
src/db/: Database.cpp  Database.h
src/rule/: RuleEngine.cpp  RuleEngine.h
src/ui/: App.cpp  App.h
